<resources>
    <string name="app_name">Apphud Demo</string>
    <string name="nav_header_title">Apphud Demo</string>
    <string name="nav_header_subtitle">hi@apphud.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_customer">Customer</string>
    <string name="menu_paywalls">Paywalls</string>
    <string name="menu_products">Products</string>
    <string name="menu_groups">Permission groups</string>
    <string name="menu_purchases">Purchases</string>

    <string name="customerTitle">User ID:</string>
    <string name="info">Sdk:</string>
    <string name="app_version">App version:</string>
    <string name="success">Success</string>
    <string name="purchased_at">Purchased At:</string>
    <string name="expires_at">Expires At:</string>
    <string name="status">Status:</string>
    <string name="name">Product name:</string>
    <string name="id">Product id:</string>
    <string name="price">Price:</string>
    <string name="sync_purchases">Sync purchases</string>
    <string name="is_default">Is default: </string>
    <string name="experiment">Experiment: </string>
    <string name="variation">Variation: </string>
    <string name="json">Json</string>
    <string name="restore_success">Success: restored purchases count %s</string>
    <string name="select_offer">Select Offer</string>
    <string name="use_apphud_purchases">Use Apphud purchases</string>
    <string name="menu_billing">Billing</string>
    <string name="menu_billing_purchases">Billing purchases</string>
    <string name="base_plan_id">Base Plan ID:</string>
    <string name="offer_id">Offer ID:</string>
    <string name="offer_tag">Offer Tag:</string>
    <string name="pricing_phases">Pricing phases:</string>
    <string name="copied">Purchase token copied to clipboard</string>
    <string name="consume_purchase">Consume INAPP purchase</string>
</resources>