<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_customer">

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.apphud.demo.ui.customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" >
        <action
            android:id="@+id/action_nav_customer_to_productsFragment"
            app:destination="@id/productsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.apphud.demo.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_purchases"
        android:name="com.apphud.demo.ui.purchases.PurchasesFragment"
        android:label="@string/menu_purchases"
        tools:layout="@layout/fragment_purchases" />

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.apphud.demo.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" >
        <argument
            android:name="paywallId"
            app:argType="string" />
    </fragment>

</navigation>