<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCustomer"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customerTitle"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/customerId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="test_user"
            android:ellipsize="end"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idCustomer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/sdk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="v.1.1.1"
            android:ellipsize="end"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAppInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idAppInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/appVersion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tools:text="v.1.1.1"
            android:ellipsize="end"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idAppInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_purchases"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            style="@style/button_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:id="@+id/btnInab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="INAP"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="10dp"
            style="@style/button_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSync"/>

        <Button
            android:id="@+id/btnSubs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBS"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="10dp"
            style="@style/button_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnInab"/>

        <Button
            android:id="@+id/btnException"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="USE TIMEOUT"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="10dp"
            style="@style/button_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubs"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtPaywallsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_paywalls"
        android:ellipsize="end"
        android:textColor="@color/branding_blue_1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/paywallsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
